[gd_scene load_steps=20 format=3 uid="uid://de88uemj00e6x"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_uahul"]
[ext_resource type="Texture2D" uid="uid://l8ieik8h4pvg" path="res://dwarf.png" id="2_y3siq"]
[ext_resource type="Script" path="res://HitBox.gd" id="3_q7pfl"]
[ext_resource type="AudioStream" uid="uid://jdctqt0o7xv4" path="res://NPCs/sword2.wav" id="4_inhbh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uc5en"]
atlas = ExtResource("2_y3siq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij8j2"]
atlas = ExtResource("2_y3siq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp07f"]
atlas = ExtResource("2_y3siq")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cp23"]
atlas = ExtResource("2_y3siq")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ojtk"]
atlas = ExtResource("2_y3siq")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep14e"]
atlas = ExtResource("2_y3siq")
region = Rect2(351, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_godsc"]
atlas = ExtResource("2_y3siq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13ao"]
atlas = ExtResource("2_y3siq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyjwj"]
atlas = ExtResource("2_y3siq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr3cu"]
atlas = ExtResource("2_y3siq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d31a"]
atlas = ExtResource("2_y3siq")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcggq"]
atlas = ExtResource("2_y3siq")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwrid"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij8j2")
}],
"loop": true,
"name": &"attack_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp07f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cp23")
}],
"loop": true,
"name": &"attack_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ojtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep14e")
}],
"loop": true,
"name": &"attack_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_godsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13ao")
}],
"loop": true,
"name": &"attack_up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_godsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyjwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr3cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij8j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d31a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp07f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cp23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ojtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcggq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep14e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr3cu")
}],
"loop": true,
"name": &"down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d31a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp07f")
}],
"loop": true,
"name": &"left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ojtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcggq")
}],
"loop": true,
"name": &"right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_godsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyjwj")
}],
"loop": true,
"name": &"up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37f6r"]
size = Vector2(5, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtx6c"]
size = Vector2(50, 50)

[node name="player" type="CharacterBody2D"]
position = Vector2(114, 100)
script = ExtResource("1_uahul")
damage = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 2)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kwrid")
animation = &"up"

[node name="HitBox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(-1, 29.5)
rotation = 1.5708
script = ExtResource("3_q7pfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(-15.5, -1)
shape = SubResource("RectangleShape2D_37f6r")
disabled = true
debug_color = Color(0.960784, 0, 0.501961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mtx6c")
one_way_collision_margin = 7.2

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_inhbh")
volume_db = -5.0

[connection signal="area_entered" from="AnimatedSprite2D/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
